--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -14,6 +14,7 @@ djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.0
 djoser==2.1.0
 drf-yasg==1.20.0
+Faker==8.3.0
 gunicorn==20.1.0
 idna==2.10
 inflection==0.5.1
@@ -28,6 +29,7 @@ psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==2.1.0
 pyparsing==2.4.7
+python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
@@ -39,5 +41,6 @@ six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
+text-unidecode==1.3
 uritemplate==3.0.1
 urllib3==1.26.4
