--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -9,13 +9,15 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # Add additional alpine download url in dockerfile
-RUN echo -e "http://dl-4.alpinelinux.org/alpine/v3.12/main\nhttp://dl-4.alpinelinux.org/alpine/v3.12/community" > /etc/apk/repositories
+RUN echo -e "http://dl-4.alpinelinux.org/alpine/v3.12/main\nhttp://dl-4.alpinelinux.org/alpine/v3.12/community" > /etc/apk/repositories && \
+    echo -e "http://dl-2.alpinelinux.org/alpine/v3.12/main\nhttp://dl-2.alpinelinux.org/alpine/v3.12/community" > /etc/apk/repositories && \
+    echo -e "http://dl-3.alpinelinux.org/alpine/v3.12/main\nhttp://dl-3.alpinelinux.org/alpine/v3.12/community" > /etc/apk/repositories && \
+    echo -e "http://dl-5.alpinelinux.org/alpine/v3.12/main\nhttp://dl-5.alpinelinux.org/alpine/v3.12/community" > /etc/apk/repositories
 
 # install psycopg2 dependencies
 RUN apk update \
     && apk add postgresql-dev gcc python3-dev musl-dev mariadb-dev
 
-RUN apk add py-cryptography
 #openssl
 RUN apk add --no-cache libressl-dev  libffi-dev
 RUN apk upgrade --update-cache --available && apk add openssl && rm -rf /var/cache/apk/*
